<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="16dp"
            android:src="@drawable/logo"/>

    <LinearLayout

            android:layout_width="300dp"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


        <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:textColorHint="@color/btn_action"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:nextFocusDown="@+id/password"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:selectAllOnFocus="true"
                android:inputType="textNoSuggestions"
                android:textColor="@color/btn_action"
                android:hint="@string/login"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:imeOptions="actionDone"
                android:textColorHint="@color/btn_action"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="16dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/btn_action"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        <CheckBox
                android:id="@+id/show_password"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/show_password"/>

        <Button
                android:text="@string/connection"
                android:textColor="@color/btn_action_txt"
                android:id="@+id/signin"
                android:background="@drawable/btn_action"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:text="@string/register"
                android:textColor="@color/btn_action_txt"
                android:id="@+id/signup"
                android:background="@drawable/btn_action"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>
        <Button
                android:text="@string/demo"
                android:textColor="@color/btn_action_txt"
                android:id="@+id/demo"
                android:layout_margin="16dp"
                android:background="@drawable/btn_action"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>


    </LinearLayout>

</RelativeLayout>