<?xml version="1.0" encoding="utf-8"?><!--
Pasteque Android client
Copyright (C) Pasteque contributors, see the COPYRIGHT file

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<!-- Customer data to include. Shows customer picker and associated data -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/user_characteristic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/customers_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ticket_dropdown"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/credCust" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/seecustom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/custPrepaid" />

        <TextView
            android:id="@+id/custPrepaidAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="XXX.XX€" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/currentDebt" />

        <TextView
            android:id="@+id/currentDebt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="Total : XXX.XX€" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/mountMax" />

        <TextView
            android:id="@+id/mountMax"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="Total : XXX.XX€" />
    </LinearLayout>

</LinearLayout>
